# OptiVision_AI

./: main.py  pyproject.toml
src/optivision/analytics/: line_counter.py  metrics.py
src/optivision/vision/: detector.py  pipeline.py  tracker.py
