[project]
name = "optivision-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.139.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "supervision>=0.29.1",
    "ultralytics>=8.4.90",
    "uvicorn>=0.50.2",
]
